<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mulgish</groupId>
    <artifactId>mutinyfx</artifactId>
    <version>0.0.1</version>

    <name>MutinyFX</name>
    <description>Mutiny for JavaFX</description>
    <url>https://github.com/Mulgish/MutinyFX</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/Mulgish/MutinyFX/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <id>Mulgish</id>
            <name>Juri Duval</name>
            <email>juri.duval@gmail.com</email>
            <url>https://github.com/Mulgish</url>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:Mulgish/MutinyFX.git</connection>
        <developerConnection>scm:git:git@github.com:Mulgish/MutinyFX.git</developerConnection>
        <url>https://github.com/Mulgish/MutinyFX</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <javafx.version>11.0.2</javafx.version>
        <mutiny.version>1.2.0</mutiny.version>
        <maven.surefire.version>3.0.0-M5</maven.surefire.version>
        <jacoco.version>0.8.7</jacoco.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>io.smallrye.reactive</groupId>
            <artifactId>mutiny</artifactId>
            <version>${mutiny.version}</version>
        </dependency>
        <!--TESTING-->
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>openjfx-monocle</artifactId>
            <version>jdk-11+26</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
                    <!--suppress UnresolvedMavenProperty -->
                    <argLine>
                        ${mavenArgs}
                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.javafx.binding=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.javafx.binding=ALL-UNNAMED
                        --add-exports javafx.base/com.sun.javafx.binding=ALL-UNNAMED
                        --add-exports javafx.base/com.sun.javafx.collections=ALL-UNNAMED
                        --add-exports javafx.base/com.sun.javafx=ALL-UNNAMED
                        --add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED
                        --add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED
                        --add-reads com.mulgish.mutinyfx=org.reactivestreams
                    </argLine>
                    <systemPropertyVariables>
                        <!--suppress UnresolvedMavenProperty -->
                        <jacoco.test>${mavenArgs}</jacoco.test>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <propertyName>mavenArgs</propertyName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>coverage-report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
